@@ -5,7 +5,6 @@
 ############################################################################
 BIN_DIR => "/usr/bin",
 LIB_DIR => "/usr/lib",
-WARNINGS => "off",
 DEBUG => "off",
 BOUNDS_CHECK => "off",
 LIBCHECK_INST => "",
