@@ -1,3 +1,8 @@
+For 1.17:
+	- new menubar operation, can be compiled without it. 
+
+	- shape compiler thread, if supported by OS.
+
 For 1.16:
 	- VisibilitySensor
 
